[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "batcave"
authors = [{ name = "Jeffery G. Smith", email = "web@pobox.com" }]
readme = "DOCUMENTATION.md"
license = { file = "LICENSE" }
dynamic = ["version", "description"]

requires-python = "~=3.12"
keywords = ["python", "programming", "utilities"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "License :: OSI Approved :: MIT License",

    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",

    "Intended Audience :: Developers",
    "Topic :: Software Development",
    "Natural Language :: English",
]

dependencies = [
    "docker ~= 7.1",
    "DotMap ~= 1.3",
    "GitPython ~= 3.1",
    "google-api-core",
    "kubernetes ~= 31.0",
    "requests ~= 2.32",
    "PyYAML ~= 6.0",
    "pywin32-stubs; sys_platform == 'win32'",
    "WMI ~= 1.5; sys_platform == 'win32'",
    "psutil ~= 6.1; platform_machine not in 'armv6l armv7l armv8b armv8l'",
    "PyQt5 ~= 5.15; platform_machine not in 'aarch64 aarch64_be armv6l armv7l armv8b armv8l'",
]

[project.optional-dependencies]
dev = ["bumpver", "vjer"]
test = [
    "flake8",
    "flake8-annotations",
    "flake8-pyproject",
    "mypy",
    "pylint",
    "PyQt5-stubs",
    "types-python-dateutil",
    "types-PyYAML",
    "types-psutil",
    "types-requests",
    "types-pywin32; sys_platform == 'win32'",
    "unittest-xml-reporting"
]
# doc = []

[project.urls]
homepage = "https://github.com/tardis4500/batcave/"
documentation = "https://batcave.readthedocs.io"
repository = "https://github.com/tardis4500/batcave/"
changelog = "https://github.com/tardis4500/batcave/blob/master/CHANGELOG.md"

[tool.flake8]
max-line-length = 200
ignore = ["ANN002", "ANN003", "ANN101", "ANN204", "ANN401"]

[tool.pylint.format]
max-line-length = 200

[tool.pylint.design]
max-attributes = 10
max-args = 10
max-positional-arguments = 10

[tool.pylint.messages_control]
disable = ["duplicate-code", "fixme"]

[[tool.mypy.overrides]]
module = "docker.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "dotmap.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "kubernetes.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "P4.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "pywintypes.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "win32typing.*"
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "wmi.*"
ignore_missing_imports = true

[tool.bumpver]
current_version = "v45.0.0rc3"
version_pattern = "vMAJOR.MINOR.PATCH[PYTAGNUM]"
commit_message = "bump version {old_version} -> {new_version} [skip ci]"
commit = true
tag = false
push = true

[tool.bumpver.file_patterns]
"batcave/__init__.py" = ["__version__ = '{pep440_version}'"]

# cSpell:ignore buildapi pywin psutil armv bumpver pyproject dateutil pytagnum
